# Robotics-Test-Integration-Engineer

./: .gitignore  Dockerfile_opencv
.devcontainer/: Dockerfile
docs/: homework.md
robotics/configs/: env_vars.sh  nodes_launch.yaml  robotics.launch.py  startRobotics.sh  valgrid.sh
robotics/media/audio/: filter.m
robotics/ros2/src/custom_gps/: CMakeLists.txt  package.xml
robotics/ros2/src/custom_gps/include/custom_gps/: custom_gps.hpp
robotics/ros2/src/custom_gps/src/: custom_gps.cpp
robotics/ros2/src/interfaces/include/modules/: speaker.hpp
robotics/ros2/src/interfaces/src/modules/: speaker.cpp
robotics/ros2/src/lifecycle_manager/src/: lifecycle_manager.cpp
robotics/ros2/src/motion_control/include/motion_control/: pid_controller.hpp
robotics/ros2/src/motion_control/src/: pid_controller.cpp  speed_controller.cpp
robotics/ros2/src/plotter/plotter/: plotter_node.py
robotics/ros2/src/rpm_converter/: CMakeLists.txt  package.xml
robotics/ros2/src/rpm_converter/include/rpm_converter/: rpm_converter.hpp
robotics/ros2/src/rpm_converter/src/: rpm_converter_node.cpp
robotics/ros2/src/wheel_odometry/src/: wheel_odometry.cpp
valgrid_log/: interfaces_output.txt  lifecycle_manager_output.txt  motion_control_output.txt  plotter_output.txt  rpm_converter_output.txt  wheel_odometry_output.txt
